src/test/ui/derives/derives-span-Clone-struct.stderr
error[E0277]: the trait bound `Error: std::clone::Clone` is not satisfied
  --> $DIR/derives-span-Clone-struct.rs:8:5
   |
LL |     x: Error
   |     ^^^^^^^^ the trait `std::clone::Clone` is not implemented for `Error`
   |
   = note: required by `std::clone::Clone::clone`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
